# mf-hackathon-enr

./: .gitignore
frontend/: README.md  index.html  package-lock.json  package.json
frontend/dep/: shadertiledlayer-1.0.0.tgz
frontend/public/: hackathon.avif
frontend/public/tilesets/CMCC/rsds_01/: index.json
frontend/public/tilesets/CMCC/rsds_02/: index.json
frontend/public/tilesets/CMCC/rsds_03/: index.json
frontend/public/tilesets/CMCC/rsds_04/: index.json
frontend/public/tilesets/CMCC/rsds_05/: index.json
frontend/public/tilesets/CMCC/rsds_06/: index.json
frontend/public/tilesets/CMCC/rsds_07/: index.json
frontend/public/tilesets/CMCC/rsds_08/: index.json
frontend/public/tilesets/CMCC/rsds_09/: index.json
frontend/public/tilesets/CMCC/rsds_10/: index.json
frontend/public/tilesets/CMCC/rsds_11/: index.json
frontend/public/tilesets/CMCC/rsds_12/: index.json
frontend/public/tilesets/CMCC/tas_01/: index.json
frontend/public/tilesets/CMCC/tas_02/: index.json
frontend/public/tilesets/CMCC/tas_03/: index.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  store.ts  tools.ts
frontend/src/components/InfoDrawerContent/: index.tsx  style.module.css
frontend/src/components/MenuIndicators/: index.tsx
frontend/src/components/MenuModels/: index.tsx
frontend/src/components/MlMap/: index.tsx  style.module.css
frontend/src/components/MonthSlider/: index.tsx
frontend/src/components/TraccSlider/: index.tsx
notebooks/: tasmin.ipynb
tiling/: to-web-mercator.py
tool-kit/: pyproject.toml
tool-kit/src/: downloader.py
(+33 files in other folders)
