[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mf_hackathon_downloader"
version = "0.1.0"
description = "Downloader for MeteoFrance DRIAS hackathon data"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "requests",
    "minio",
    "tqdm",
    "xarray"
]
